--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,7 @@
+* {
+  scroll-behavior: smooth;
+}
+
 .app {
   min-height: 100vh;
   background-color: #39445a;
@@ -9,5 +13,30 @@
 @media (max-width: 700px) {
   .app {
     padding-top: 70px;
+  }
+}
+
+.pageTitle {
+  /* text-transform: uppercase; */
+  display: flex;
+  justify-content: initial;
+  font-family: "Montserrat", sans-serif;
+  font-size: 36px;
+  border-radius: 50px;
+  color: white;
+  padding: 20px 0 20px 0;
+  margin-left: 18px;
+}
+@media (max-width: 1000px) {
+  .pageTitle {
+    font-size: 28px;
+    margin-left: 14px;
+  }
+}
+@media (max-width: 678px) {
+  .pageTitle {
+    font-size: 28px;
+    padding-top: 40px;
+    margin-left: 5px;
   }
 }
