--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -7,7 +7,7 @@
   text-transform: uppercase;
   background-color: #39445a;
   font-family: "Montserrat", sans-serif;
-  font-size: 5vw;
+  font-size: 70px;
   padding: 15px 0 15px 0;
   box-shadow: 0px 1px 5px black;
   color: white;
@@ -17,6 +17,6 @@
 @media (max-width: 1000px) {
   .header {
     padding-top: 15px;
-    font-size: 6.4vw;
+    font-size: 50px;
   }
 }
