--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -5,7 +5,7 @@
   display: flex;
   justify-content: center;
   text-transform: uppercase;
-  background-color: #39445a;
+  background-color: #17222b;
   font-family: "Montserrat", sans-serif;
   font-size: 70px;
   padding: 15px 0 15px 0;
