--- a/src/components/SingleContent/SingleContent.css
+++ b/src/components/SingleContent/SingleContent.css
@@ -4,14 +4,14 @@
   width: 200px;
   padding: 5px;
   margin: 5px 0;
-  background-color: #282c34;
+  background-color: #2b3746;
   border-radius: 10px;
   position: relative;
   font-family: "Montserrat", sans-serif;
 }
 
 .media:hover {
-  background-color: white;
+  background-color: rgb(248, 248, 248);
   color: black;
 }
 
